--- a/part7/bloglist/frontend/public/index.html
+++ b/part7/bloglist/frontend/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- material UI stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,7 +32,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+
+  <!-- Add background-color for whole page -->
+  <body style="background-color: #b8e0d4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
